Add Securitylocation
